results/SVCOMP/4-shot/log-ExSymExeLongBytecodes-2024_03_18_21_58_16.txt
class Main {

  //@ ensures \result <==> x >= 0 && z == 5;
  public static boolean f(long x) {
    x = x > 0 ? -x : x;
    long y = 5;
    Main inst = new Main();
    return inst.test(x, y);
  }

  //@ ensures \result <==> (x - z) <= 34565;
  //@ ensures \result ==> System.out.println("branch diff <= c");
  //@ ensures \result ==> System.out.println("branch sum < z");
  //@ ensures !\result ==> System.out.println("branch sum >= z");
  public static boolean test(long x, long z) { // invokestatic
    long a = x;
    long b = z;
    long c = 34565;

    long negate = -z; // LNEG

    long sum = a + b; // LADD
    long sum2 = z + 9090909L; // LADD
    long sum3 = 90908877L + z; // LADD

    long diff = a - b; // LSUB
    long diff2 = b - 19999999999L; // LSUB
    long diff3 = 9999999999L - a; // LSUB

    long mul = a * b; // LMUL
    long mul2 = a * 19999999999L; // LMUL
    long mul3 = 19999999999L * b; // LMUL

    if (diff > c) {
      return false;
    } else System.out.println("branch diff <= c");
    if (sum < z) System.out.println("branch sum < z");
    else
      System.out.println("branch sum >= z");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:3: error: cannot find symbol
  //@ ensures \result <==> x >= 0 && z == 5;
                                     ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:12: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> System.out.println("branch diff <= c");
                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:13: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result ==> System.out.println("branch sum < z");
                                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:14: error: incompatible types: void cannot be converted to boolean
  //@ ensures !\result ==> System.out.println("branch sum >= z");
                                             ^
4 errors

